--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.15.0",
     "nodemon": "^3.1.10",
     "pug": "2.0.0-beta11",
+    "select2": "^4.1.0-rc.0",
     "sequelize": "^6.37.7"
   }
 }
