--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.10",
     "pug": "2.0.0-beta11",
     "select2": "^4.1.0-rc.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "world-countries": "^5.1.0"
   }
 }
