--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "morgan": "~1.9.1",
     "mysql2": "^3.15.0",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "pug": "2.0.0-beta11",
     "select2": "^4.1.0-rc.0",
