--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flatpickr": "^4.6.13",
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
+    "marked": "^16.4.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.15.0",
     "nodemailer": "^7.0.6",
