--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "marked": "^16.4.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.15.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "pug": "2.0.0-beta11",
